--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,40 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
+import Layout from "../layouts/Layout.astro";
 
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import parents from "../data/sample-data.json";
+
+const req = await fetch("https://jsonplaceholder.typicode.com/todos/1");
+const data = await req.json();
+
+const num = 1;
+const obj = {
+  name: "Christian",
+  age: 28,
+};
+const arr = ["James", "Mateo"];
+
+console.log("Logs on the server");
 ---
 
 <Layout>
-	<Welcome />
+  <div>
+    {
+      parents.map((parent) => (
+        <>
+          <p>{parent.name}</p>
+          <p>{parent.age}</p>
+          <p>{parent.email}</p>
+          <p>{parent.occupation}</p>
+        </>
+      ))
+    }
+  </div>
+
+  <p>{JSON.stringify(data)}</p>
+
+  <p>{num} + 1 = {num + 1}</p>
+
+  <p>{obj.name} is {obj.age} years old</p>
+
+  <p>{arr.map((name) => <p>{name}</p>)}</p>
 </Layout>
