Props and components

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,10 @@
+---
+import Link from "../components/Link.astro";
+
+// Sets a default in case no title was passed as props.
+const { title = "Astro" } = Astro.props;
+---
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -5,9 +12,15 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
-    <title>Astro Tutorial</title>
+    <title>{title}</title>
   </head>
   <body>
+    <nav>
+      <Link href="https://github.com/">GitHub</Link>
+
+      <Link href="https://www.google.com/">Google</Link>
+    </nav>
+
     <!-- slot indicates the content in between this imported layout (see index.astro) -->
     <slot />
   </body>
