--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ const arr = ["James", "Mateo"];
 console.log("Logs on the server");
 ---
 
-<Layout>
+<Layout title="Astro Tutorial">
   <div>
     {
       parents.map((parent) => (
