--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,8 @@
 ---
 import Link from "../components/Link.astro";
 
+import "../styles/global.css"
+
 // Sets a default in case no title was passed as props.
 const { title = "Astro" } = Astro.props;
 ---
