--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,8 @@
 ---
 import Layout from "../layouts/Layout.astro";
 
+import Card from "../components/Card";
+
 import parents from "../data/sample-data.json";
 
 const req = await fetch("https://jsonplaceholder.typicode.com/todos/1");
@@ -37,4 +39,6 @@ console.log("Logs on the server");
   <p>{obj.name} is {obj.age} years old</p>
 
   <p>{arr.map((name) => <p>{name}</p>)}</p>
+
+  <Card />
 </Layout>
